--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.mail.protocol=smtp
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=fernando.beleboni@gmail.com
-spring.mail.password=6gbhp4gb
+spring.mail.username=seu@gmail.com
+spring.mail.password=****
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
